[package]
name = "tun2socks"
version = "0.1.0"
authors = ["Arror <hallo.maqiang@icloud.com>"]
edition = "2021"

[lib]
name = "tun2socks"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = [
    "leaf/config-json",
    "leaf/inbound-tun",
    "leaf/outbound-socks",
]

[dependencies]
leaf = { path = "../leaf/leaf", default-features = false, optional = true }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"

[build-dependencies]
bindgen = "0.57"
